# aoc-2024

./: .gitignore  LICENSE  pyproject.toml
aoc2024/day_1/: solution.py
aoc2024/day_10/: solution.py
aoc2024/day_11/: solution.py
aoc2024/day_12/: solution.py
aoc2024/day_13/: solution.py
aoc2024/day_2/: solution.py
aoc2024/day_3/: solution.py
aoc2024/day_4/: solution.py
aoc2024/day_5/: solution.py
aoc2024/day_6/: solution.py
aoc2024/day_7/: solution.py
aoc2024/day_8/: solution.py
aoc2024/day_9/: solution.py
aoc2024/day_template/: solution.py
tests/day_1/: test_solution.py
tests/day_10/: test_solution.py
tests/day_11/: test_solution.py
tests/day_12/: test_solution.py
tests/day_13/: test_solution.py
tests/day_2/: test_solution.py
tests/day_3/: input_sample.txt  test_solution.py
tests/day_4/: test_solution.py
tests/day_5/: test_solution.py
tests/day_6/: test_solution.py
tests/day_7/: test_solution.py
tests/day_8/: test_solution.py
tests/day_9/: test_solution.py
tests/day_template/: test_solution.py
